Box selection behavior is bugged after specific control. #59170

Closed
opened 2018-12-11 07:34:12 +01:00 by Wan Lee · 4 comments

System Information
Operating system: Windows 10 x64
Graphics card: Nvidia GTX 1060

Blender Version
Broken: blender-2.80-9a8b6d51c12-win64

Short description of error
Box selection + shift(ctrl) key should function for Add, Subtract.
It is normal when a fresh start.
If you click 'Add' button, shift(ctrl) key function will not work anymore.

Exact steps for others to reproduce the error
New project.
Ensure you're in the Select Box and New button.
Enter Edit mode.
Test Shift or Ctrl keys to working add or subtract function.
Click Add button.
The Box selection only works for Add as expected but weirdly you can't subtract selection with Ctrl key.
Click the New button.
Now, The Shift or Ctrl key both will not work.

**System Information** Operating system: Windows 10 x64 Graphics card: Nvidia GTX 1060 **Blender Version** Broken: blender-2.80-9a8b6d51c12-win64 **Short description of error** Box selection + shift(ctrl) key should function for Add, Subtract. It is normal when a fresh start. If you click 'Add' button, shift(ctrl) key function will not work anymore. **Exact steps for others to reproduce the error** New project. Ensure you're in the Select Box and New button. Enter Edit mode. Test Shift or Ctrl keys to working add or subtract function. Click Add button. The Box selection only works for Add as expected but weirdly you can't subtract selection with Ctrl key. Click the New button. Now, The Shift or Ctrl key both will not work.
Author

Added subscriber: @spinear

Added subscriber: @spinear
Campbell Barton self-assigned this 2018-12-11 09:24:24 +01:00

This issue was referenced by 4ae68d6825

This issue was referenced by 4ae68d6825a03617b6abf2f897690189ec3db3a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you! Now it works perfectly! 7d4d9e9dbd

Thank you! Now it works perfectly! 7d4d9e9dbd3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59170
No description provided.